--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -242,7 +242,7 @@
    "source": [
     "# np.full(shape, fill_value)\n",
     "# Creates an array filled with a specified constant value.\n",
-    "arr_full = np.full((2, 3), fill_value=7)\n",
+    "arr_full = np.full((7, 7), fill_value=7)\n",
     "print(\"np.full:\\n\", arr_full)"
    ],
    "id": "6e109336811c8e5b",
@@ -1160,9 +1160,105 @@
    "cell_type": "markdown",
    "source": [
     "---\n",
-    "## Your solution:"
+    "## Your solution:\n"
    ],
    "id": "fdc89ef6b5f4c40a"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "import numpy as np\n",
+    "data = np.random.normal(loc=50, scale=10, size=(100, 10)) #creating a NumPy array\n",
+    "print(f\"Shape:{data.shape}\")\n",
+    "print(f\"Data type:{data.dtype}\")\n",
+    "print(f\"First 5 rows:\\n{data[:5]}\")"
+   ],
+   "id": "8ac67efaa4769c90",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "data = np.where((data >= 20) & (data <= 80), data, np.nan) #allowed values in int [20,80] if else > replace\n",
+    "nan_count = np.isnan(data).sum() #sum up all the nan values\n",
+    "print(f\"How many np.nan values:{nan_count}\")"
+   ],
+   "id": "c7fb59e7128fd0a4",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "mean_c = np.nanmean(data, axis=0) #compute the mean for each column - ignor nan values\n",
+    "mean_c = np.ones((100,1))*mean_c #get the same size as array new_data\n",
+    "data= np.where(np.isnan(data), mean_c,data) #if nan value >replace with mean value"
+   ],
+   "id": "44af66a29467f0c5",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "mean_s = np.mean(data, axis=0) #compute the col. mean\n",
+    "std_s = np.std(data, axis=0) #compute the std\n",
+    "std_s = np.ones((100,1))*std_s #get the same size as the array\n",
+    "data = (data - mean_s)/std_s #column standardization\n",
+    "positive_values = data > 0\n",
+    "data_new = data.copy()\n",
+    "data_new[positive_values] = np.sqrt(data[positive_values]) #square root of only pos. values\n",
+    "data_new[:5] = np.exp(data_new[:5]) #change only first five rows\n",
+    "print(f\"First 5 rows:\\n{data_new[:5]}\")"
+   ],
+   "id": "1c9ec35cace571df",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "perc_75 = np.percentile(data_new, 75, axis=0) #compute the 75th perc. for each col.\n",
+    "mask_b = data_new > perc_75 #mark data that > 75th perc\n",
+    "high_values = np.sum(mask_b) #True value as 1\n",
+    "print(f\"How many high values:{high_values}\")\n",
+    "perc_25 = np.percentile(data_new, 25, axis=0) #compute the 25th perc. for each col.\n",
+    "perc_25 = np.ones((100,10))*perc_25 #get the same size as the array\n",
+    "data_new = np.where(data_new < perc_25, perc_25, data_new) #change data < 25th perc."
+   ],
+   "id": "4b0af5ae81cba980",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "final_data = data_new. #compute values and print fro the final data\n",
+    "col_mean = np.mean(final_data, axis=0)\n",
+    "col_med = np.median(final_data, axis=0)\n",
+    "col_var = np.var(final_data, axis=0)\n",
+    "col_std = np.std(final_data, axis=0)\n",
+    "col_min = np.min(final_data, axis=0)\n",
+    "col_max = np.max(final_data, axis=0)\n",
+    "overall_mean = np.mean(final_data)\n",
+    "print(f\"Column-wise mean:{col_mean}\")\n",
+    "print(f\"Column-wise median:{col_med}\")\n",
+    "print(f\"Column-wise variance:{col_var}\")\n",
+    "print(f\"Column-wise std:{col_std}\")\n",
+    "print(f\"Column-wise min:{col_min}\")\n",
+    "print(f\"Column-wise max:{col_max}\")\n",
+    "print(f\"Overall mean:{overall_mean}\")"
+   ],
+   "id": "678ea53610bb0879",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
