--- a/assignment3.ipynb
+++ b/assignment3.ipynb
@@ -1827,8 +1827,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T12:28:23.343919Z",
-     "start_time": "2025-11-10T12:28:23.281067Z"
+     "end_time": "2025-11-10T16:07:42.642115Z",
+     "start_time": "2025-11-10T16:07:42.563851Z"
     }
    },
    "cell_type": "code",
@@ -1886,31 +1886,24 @@
     "    roll_avg.append(avg)\n",
     "s2_df[\"temp_roll\"] = roll_avg\n",
     "\n",
-    "humidity = s2_df[\"humidity\"].values\n",
-    "hum_diff = []\n",
-    "for i in range(len(s2_df)-1):\n",
-    "    diff = humidity[i] - humidity[i+1] #current - next\n",
-    "    hum_diff.append(diff)\n",
-    "hum_diff.append(None) #last has no next value\n",
-    "s2_df[\"hum_diff\"] = hum_diff\n",
+    "#OR https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.rolling.html, built-in func.\n",
+    "s2_df = s2_df.reset_index()\n",
+    "s2_df = s2_df.set_index(\"timestamp\")\n",
+    "s2_df[\"temp_roll2\"] = s2_df[\"temperature\"].rolling(\"30min\").mean()\n",
     "\n",
-    "values = []\n",
-    "temp = s2_df[\"temperature\"].values\n",
-    "hum = s2_df[\"humidity\"].values\n",
-    "for i in range(len(s2_df)):\n",
-    "    if i == 0:\n",
-    "        values.append(False) #1st value\n",
-    "    else:\n",
-    "        temp_inc = temp[i] - temp[i-1] > 5 #increased temp\n",
-    "        hum_drop = hum[i] - hum[i-1] < -20 #lower humidity\n",
-    "        values.append(temp_inc and hum_drop)\n",
-    "s2_df[\"value_changes\"] = values #bool col\n",
+    "#https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.diff.html\n",
+    "s2_df[\"hum_diff\"] = -s2_df[\"humidity\"].diff(-1)\n",
+    "\n",
+    "s2_df[\"value_changes\"] = ((s2_df[\"temperature\"].diff() > 5) & (s2_df[\"humidity\"].diff() < -20))\n",
+    "s2_df[\"value_changes\"] = s2_df[\"value_changes\"].fillna(False) #first row nan > false\n",
     "\n",
     "s2_df.to_csv(\"data/sensor_data_S2.csv\")\n",
     "\n",
     "timestamps2 = df.index.get_level_values(\"timestamp\")\n",
     "df['weekday'] = timestamps2.day_name() #day names\n",
-    "df['is_weekend'] = df['weekday'].isin(['Saturday', 'Sunday']) #bol mask\n"
+    "df['is_weekend'] = df['weekday'].isin(['Saturday', 'Sunday']) #bol mask\n",
+    "\n",
+    "\n"
    ],
    "id": "bbe094978b29ce1",
    "outputs": [
@@ -1930,19 +1923,79 @@
       "dtype: object\n",
       "0\n",
       "0\n",
-      "2025-10-30 08:00:00\n"
+      "2025-10-30 08:00:00\n",
+      "                    sensor_id  temperature  humidity temp_category  \\\n",
+      "timestamp                                                            \n",
+      "2025-10-30 08:00:00        S2        22.99     46.09        medium   \n",
+      "2025-10-30 08:05:00        S2        22.47     44.42        medium   \n",
+      "2025-10-30 08:10:00        S2        22.86     49.36        medium   \n",
+      "2025-10-30 08:15:00        S2        22.77     47.32        medium   \n",
+      "2025-10-30 08:20:00        S2        21.76     43.31        medium   \n",
+      "2025-10-30 08:25:00        S2        23.55     44.96        medium   \n",
+      "2025-10-30 08:30:00        S2        22.46     46.38        medium   \n",
+      "2025-10-30 08:35:00        S2        23.10     46.22        medium   \n",
+      "2025-10-30 08:40:00        S2        23.02     46.06        medium   \n",
+      "2025-10-30 08:45:00        S2        22.38     47.28        medium   \n",
+      "2025-10-30 08:50:00        S2        22.34     46.13        medium   \n",
+      "2025-10-30 08:55:00        S2        22.63     49.75        medium   \n",
+      "2025-10-30 09:00:00        S2        22.67     47.54        medium   \n",
+      "2025-10-30 09:05:00        S2        22.72     44.67        medium   \n",
+      "2025-10-30 09:10:00        S2        22.51     47.57        medium   \n",
+      "2025-10-30 09:15:00        S2        22.52     47.85        medium   \n",
+      "2025-10-30 09:20:00        S2        23.73     45.88        medium   \n",
+      "2025-10-30 09:25:00        S2        22.00     44.70        medium   \n",
+      "2025-10-30 09:30:00        S2        22.77     46.06        medium   \n",
+      "2025-10-30 09:35:00        S2        22.65     48.68        medium   \n",
+      "\n",
+      "                     hours_from_start  is_daytime  after_12h  temp_roll  \\\n",
+      "timestamp                                                                 \n",
+      "2025-10-30 08:00:00          0.000000        True      False  22.990000   \n",
+      "2025-10-30 08:05:00          0.083333        True      False  22.730000   \n",
+      "2025-10-30 08:10:00          0.166667        True      False  22.773333   \n",
+      "2025-10-30 08:15:00          0.250000        True      False  22.772500   \n",
+      "2025-10-30 08:20:00          0.333333        True      False  22.570000   \n",
+      "2025-10-30 08:25:00          0.416667        True      False  22.733333   \n",
+      "2025-10-30 08:30:00          0.500000        True      False  22.694286   \n",
+      "2025-10-30 08:35:00          0.583333        True      False  22.710000   \n",
+      "2025-10-30 08:40:00          0.666667        True      False  22.788571   \n",
+      "2025-10-30 08:45:00          0.750000        True      False  22.720000   \n",
+      "2025-10-30 08:50:00          0.833333        True      False  22.658571   \n",
+      "2025-10-30 08:55:00          0.916667        True      False  22.782857   \n",
+      "2025-10-30 09:00:00          1.000000        True      False  22.657143   \n",
+      "2025-10-30 09:05:00          1.083333        True      False  22.694286   \n",
+      "2025-10-30 09:10:00          1.166667        True      False  22.610000   \n",
+      "2025-10-30 09:15:00          1.250000        True      False  22.538571   \n",
+      "2025-10-30 09:20:00          1.333333        True      False  22.731429   \n",
+      "2025-10-30 09:25:00          1.416667        True      False  22.682857   \n",
+      "2025-10-30 09:30:00          1.500000        True      False  22.702857   \n",
+      "2025-10-30 09:35:00          1.583333        True      False  22.700000   \n",
+      "\n",
+      "                     temp_roll2  hum_diff  value_changes  \n",
+      "timestamp                                                 \n",
+      "2025-10-30 08:00:00   22.990000     -1.67          False  \n",
+      "2025-10-30 08:05:00   22.730000      4.94          False  \n",
+      "2025-10-30 08:10:00   22.773333     -2.04          False  \n",
+      "2025-10-30 08:15:00   22.772500     -4.01          False  \n",
+      "2025-10-30 08:20:00   22.570000      1.65          False  \n",
+      "2025-10-30 08:25:00   22.733333      1.42          False  \n",
+      "2025-10-30 08:30:00   22.645000     -0.16          False  \n",
+      "2025-10-30 08:35:00   22.750000     -0.16          False  \n",
+      "2025-10-30 08:40:00   22.776667      1.22          False  \n",
+      "2025-10-30 08:45:00   22.711667     -1.15          False  \n",
+      "2025-10-30 08:50:00   22.808333      3.62          False  \n",
+      "2025-10-30 08:55:00   22.655000     -2.21          False  \n",
+      "2025-10-30 09:00:00   22.690000     -2.87          False  \n",
+      "2025-10-30 09:05:00   22.626667      2.90          False  \n",
+      "2025-10-30 09:10:00   22.541667      0.28          False  \n",
+      "2025-10-30 09:15:00   22.565000     -1.97          False  \n",
+      "2025-10-30 09:20:00   22.796667     -1.18          False  \n",
+      "2025-10-30 09:25:00   22.691667      1.36          False  \n",
+      "2025-10-30 09:30:00   22.708333      2.62          False  \n",
+      "2025-10-30 09:35:00   22.696667     -3.74          False  \n"
      ]
     }
    ],
-   "execution_count": 9
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "1402eda699b03fd8"
+   "execution_count": 6
   }
  ],
  "metadata": {
