--- a/assignment4.ipynb
+++ b/assignment4.ipynb
@@ -492,12 +492,238 @@
    "id": "d59dcf480ec62397"
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T13:41:50.477643Z",
+     "start_time": "2025-11-17T13:41:50.388292Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "#load data\n",
+    "df = pd.read_csv('data/purchases.csv')\n",
+    "customer_info = pd.read_csv('data/customer_info.csv')\n",
+    "print(df.head(5)) #raw data overview\n",
+    "print(customer_info.head(5))\n",
+    "df[\"Timestamp\"] = pd.to_datetime(df[\"Timestamp\"])\n",
+    "df = df.set_index(\"Timestamp\").sort_index()\n",
+    "\n",
+    "\n",
+    "customer_info = customer_info.set_index(\"Customer_id\")\n",
+    "df = df.join(customer_info, on=\"Customer_id\")\n",
+    "print(df.head()) #control\n",
+    "group1 = df.groupby([\"Customer_id\"]).agg(\n",
+    "    total_r = (\"Price\", \"sum\"),\n",
+    "    n_purchases = (\"Price\", \"count\"),\n",
+    "    a_purchases = (\"Price\", \"mean\"),\n",
+    ")\n",
+    "print(group1.head()) #check\n",
+    "\n",
+    "df[\"Month\"] = df.index.month_name()\n",
+    "group2 = df.groupby([\"City\", \"Month\"]).agg(\n",
+    "    total_mr=(\"Price\", \"sum\")\n",
+    ")\n",
+    "print(group2.head()) #check\n",
+    "\n",
+    "df = df.sort_values([\"Customer_id\", \"Timestamp\"])\n",
+    "df[\"rolling_avg_3\"] = (df.groupby(\"Customer_id\")[\"Price\"].rolling(3).mean().reset_index(level=0, drop=True)) #delete c_id index\n",
+    "df[\"price_diff\"] = (df.groupby(\"Customer_id\")[\"Price\"].diff())\n",
+    "print(df.head(5)) #check\n",
+    "\n",
+    "df_berlin = df[df[\"City\"] == \"Berlin\"].copy()\n",
+    "df_berlin = df_berlin.sort_values([\"Customer_id\", \"Timestamp\"])\n",
+    "df_berlin[\"rolling_avg_3\"] = (df_berlin.groupby(\"Customer_id\")[\"Price\"].rolling(3).mean().reset_index(level=0, drop=True))\n",
+    "df_berlin[\"price_diff\"] = (df_berlin.groupby(\"Customer_id\")[\"Price\"].diff())\n",
+    "\n",
+    "price_p = df.copy()\n",
+    "price_p[\"previous_price\"]= price_p.groupby(\"Customer_id\")[\"Price\"].shift(-1)\n",
+    "price_p = price_p[price_p[\"Price\"]>price_p[\"previous_price\"]*(1+0.2)].copy()\n",
+    "price_p[\"rolling_avg_3\"] = (price_p.groupby(\"Customer_id\")[\"Price\"].rolling(3).mean().reset_index(level=0, drop=True))\n",
+    "price_p[\"price_diff\"] = (price_p.groupby(\"Customer_id\")[\"Price\"].diff())\n",
+    "print(price_p.head())#check\n",
+    "\n",
+    "rich_customers = df.groupby(\"Customer_id\").filter(lambda x: x[\"Price\"].sum()>2000)\n",
+    "df[\"double_price\"] = df.groupby(\"Customer_id\")[\"Price\"].transform(lambda x: x * 2)\n",
+    "print(rich_customers.head(5)) #check\n",
+    "print(df.head(5)) #check\n",
+    "\n",
+    "df[\"Month\"] = df.index.to_period(\"M\") #text > date\n",
+    "monthly_r = (df.groupby([\"Customer_id\", \"Month\"])[\"Price\"].sum().reset_index(name=\"total_r\"))\n",
+    "monthly_r = monthly_r.sort_values([\"Customer_id\", \"Month\"])\n",
+    "monthly_r[\"Grow\"] = (monthly_r.groupby(\"Customer_id\")[\"total_r\"].diff())\n",
+    "df['cumulative_revenue'] = df.groupby('Customer_id')['Price'].cumsum()\n",
+    "#https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.cumsum.html\n",
+    "print(monthly_r.head(30)) #check\n",
+    "print(df.head(5)) #check"
+   ],
+   "id": "f0bbbc45e8d9f1fa",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Customer_id            Timestamp   Price\n",
+      "0        C037  2025-01-01 00:00:00  436.71\n",
+      "1        C049  2025-01-01 00:30:00  274.70\n",
+      "2        C017  2025-01-01 01:00:00  380.42\n",
+      "3        C049  2025-01-01 01:30:00  378.28\n",
+      "4        C002  2025-01-01 02:00:00   13.88\n",
+      "  Customer_id   Born_date       City\n",
+      "0        C001  1998-12-03  Frankfurt\n",
+      "1        C002  1988-07-03  Frankfurt\n",
+      "2        C003  1974-12-01     Munich\n",
+      "3        C004  2002-08-27  Frankfurt\n",
+      "4        C005  1967-03-05    Cologne\n",
+      "                    Customer_id   Price   Born_date       City\n",
+      "Timestamp                                                     \n",
+      "2025-01-01 00:00:00        C037  436.71  1996-09-14     Munich\n",
+      "2025-01-01 00:30:00        C049  274.70  1979-01-20     Munich\n",
+      "2025-01-01 01:00:00        C017  380.42  1981-02-23    Cologne\n",
+      "2025-01-01 01:30:00        C049  378.28  1979-01-20     Munich\n",
+      "2025-01-01 02:00:00        C002   13.88  1988-07-03  Frankfurt\n",
+      "              total_r  n_purchases  a_purchases\n",
+      "Customer_id                                    \n",
+      "C001         13055.75           56   233.138393\n",
+      "C002         15927.80           64   248.871875\n",
+      "C003         14947.34           56   266.916786\n",
+      "C004         15111.43           59   256.125932\n",
+      "C005         16798.61           64   262.478281\n",
+      "                   total_mr\n",
+      "City    Month              \n",
+      "Berlin  February   86163.85\n",
+      "        January   101192.17\n",
+      "        March      10474.86\n",
+      "Cologne February   86781.31\n",
+      "        January    98030.00\n",
+      "                    Customer_id   Price   Born_date       City    Month  \\\n",
+      "Timestamp                                                                 \n",
+      "2025-01-01 05:30:00        C001  376.61  1998-12-03  Frankfurt  January   \n",
+      "2025-01-02 02:00:00        C001   63.23  1998-12-03  Frankfurt  January   \n",
+      "2025-01-02 10:00:00        C001  108.83  1998-12-03  Frankfurt  January   \n",
+      "2025-01-05 05:00:00        C001   70.19  1998-12-03  Frankfurt  January   \n",
+      "2025-01-06 07:00:00        C001  132.80  1998-12-03  Frankfurt  January   \n",
+      "\n",
+      "                     rolling_avg_3  price_diff  \n",
+      "Timestamp                                       \n",
+      "2025-01-01 05:30:00            NaN         NaN  \n",
+      "2025-01-02 02:00:00            NaN     -313.38  \n",
+      "2025-01-02 10:00:00         182.89       45.60  \n",
+      "2025-01-05 05:00:00          80.75      -38.64  \n",
+      "2025-01-06 07:00:00         103.94       62.61  \n",
+      "                    Customer_id   Price   Born_date       City    Month  \\\n",
+      "Timestamp                                                                 \n",
+      "2025-01-01 05:30:00        C001  376.61  1998-12-03  Frankfurt  January   \n",
+      "2025-01-02 10:00:00        C001  108.83  1998-12-03  Frankfurt  January   \n",
+      "2025-01-06 11:30:00        C001  415.65  1998-12-03  Frankfurt  January   \n",
+      "2025-01-07 19:30:00        C001  382.14  1998-12-03  Frankfurt  January   \n",
+      "2025-01-10 10:30:00        C001  265.98  1998-12-03  Frankfurt  January   \n",
+      "\n",
+      "                     rolling_avg_3  price_diff  previous_price  \n",
+      "Timestamp                                                       \n",
+      "2025-01-01 05:30:00            NaN         NaN           63.23  \n",
+      "2025-01-02 10:00:00            NaN     -267.78           70.19  \n",
+      "2025-01-06 11:30:00     300.363333      306.82          196.76  \n",
+      "2025-01-07 19:30:00     302.206667      -33.51          265.98  \n",
+      "2025-01-10 10:30:00     354.590000     -116.16           17.13  \n",
+      "                    Customer_id   Price   Born_date       City    Month  \\\n",
+      "Timestamp                                                                 \n",
+      "2025-01-01 05:30:00        C001  376.61  1998-12-03  Frankfurt  January   \n",
+      "2025-01-02 02:00:00        C001   63.23  1998-12-03  Frankfurt  January   \n",
+      "2025-01-02 10:00:00        C001  108.83  1998-12-03  Frankfurt  January   \n",
+      "2025-01-05 05:00:00        C001   70.19  1998-12-03  Frankfurt  January   \n",
+      "2025-01-06 07:00:00        C001  132.80  1998-12-03  Frankfurt  January   \n",
+      "\n",
+      "                     rolling_avg_3  price_diff  \n",
+      "Timestamp                                       \n",
+      "2025-01-01 05:30:00            NaN         NaN  \n",
+      "2025-01-02 02:00:00            NaN     -313.38  \n",
+      "2025-01-02 10:00:00         182.89       45.60  \n",
+      "2025-01-05 05:00:00          80.75      -38.64  \n",
+      "2025-01-06 07:00:00         103.94       62.61  \n",
+      "                    Customer_id   Price   Born_date       City    Month  \\\n",
+      "Timestamp                                                                 \n",
+      "2025-01-01 05:30:00        C001  376.61  1998-12-03  Frankfurt  January   \n",
+      "2025-01-02 02:00:00        C001   63.23  1998-12-03  Frankfurt  January   \n",
+      "2025-01-02 10:00:00        C001  108.83  1998-12-03  Frankfurt  January   \n",
+      "2025-01-05 05:00:00        C001   70.19  1998-12-03  Frankfurt  January   \n",
+      "2025-01-06 07:00:00        C001  132.80  1998-12-03  Frankfurt  January   \n",
+      "\n",
+      "                     rolling_avg_3  price_diff  double_price  \n",
+      "Timestamp                                                     \n",
+      "2025-01-01 05:30:00            NaN         NaN        753.22  \n",
+      "2025-01-02 02:00:00            NaN     -313.38        126.46  \n",
+      "2025-01-02 10:00:00         182.89       45.60        217.66  \n",
+      "2025-01-05 05:00:00          80.75      -38.64        140.38  \n",
+      "2025-01-06 07:00:00         103.94       62.61        265.60  \n",
+      "   Customer_id    Month  total_r     Grow\n",
+      "0         C001  2025-01  7302.10      NaN\n",
+      "1         C001  2025-02  5204.79 -2097.31\n",
+      "2         C001  2025-03   548.86 -4655.93\n",
+      "3         C002  2025-01  7538.37      NaN\n",
+      "4         C002  2025-02  7838.50   300.13\n",
+      "5         C002  2025-03   550.93 -7287.57\n",
+      "6         C003  2025-01  7133.09      NaN\n",
+      "7         C003  2025-02  7141.33     8.24\n",
+      "8         C003  2025-03   672.92 -6468.41\n",
+      "9         C004  2025-01  6920.10      NaN\n",
+      "10        C004  2025-02  7008.12    88.02\n",
+      "11        C004  2025-03  1183.21 -5824.91\n",
+      "12        C005  2025-01  7928.47      NaN\n",
+      "13        C005  2025-02  7284.34  -644.13\n",
+      "14        C005  2025-03  1585.80 -5698.54\n",
+      "15        C006  2025-01  8113.09      NaN\n",
+      "16        C006  2025-02  5486.55 -2626.54\n",
+      "17        C006  2025-03  1174.60 -4311.95\n",
+      "18        C007  2025-01  6739.05      NaN\n",
+      "19        C007  2025-02  4565.22 -2173.83\n",
+      "20        C007  2025-03   581.80 -3983.42\n",
+      "21        C008  2025-01  6725.07      NaN\n",
+      "22        C008  2025-02  8830.59  2105.52\n",
+      "23        C009  2025-01  7291.73      NaN\n",
+      "24        C009  2025-02  5082.35 -2209.38\n",
+      "25        C009  2025-03   256.29 -4826.06\n",
+      "26        C010  2025-01  9420.77      NaN\n",
+      "27        C010  2025-02  6608.37 -2812.40\n",
+      "28        C010  2025-03  1525.79 -5082.58\n",
+      "29        C011  2025-01  6092.35      NaN\n",
+      "                    Customer_id   Price   Born_date       City    Month  \\\n",
+      "Timestamp                                                                 \n",
+      "2025-01-01 05:30:00        C001  376.61  1998-12-03  Frankfurt  2025-01   \n",
+      "2025-01-02 02:00:00        C001   63.23  1998-12-03  Frankfurt  2025-01   \n",
+      "2025-01-02 10:00:00        C001  108.83  1998-12-03  Frankfurt  2025-01   \n",
+      "2025-01-05 05:00:00        C001   70.19  1998-12-03  Frankfurt  2025-01   \n",
+      "2025-01-06 07:00:00        C001  132.80  1998-12-03  Frankfurt  2025-01   \n",
+      "\n",
+      "                     rolling_avg_3  price_diff  double_price  \\\n",
+      "Timestamp                                                      \n",
+      "2025-01-01 05:30:00            NaN         NaN        753.22   \n",
+      "2025-01-02 02:00:00            NaN     -313.38        126.46   \n",
+      "2025-01-02 10:00:00         182.89       45.60        217.66   \n",
+      "2025-01-05 05:00:00          80.75      -38.64        140.38   \n",
+      "2025-01-06 07:00:00         103.94       62.61        265.60   \n",
+      "\n",
+      "                     cumulative_revenue  \n",
+      "Timestamp                                \n",
+      "2025-01-01 05:30:00              376.61  \n",
+      "2025-01-02 02:00:00              439.84  \n",
+      "2025-01-02 10:00:00              548.67  \n",
+      "2025-01-05 05:00:00              618.86  \n",
+      "2025-01-06 07:00:00              751.66  \n"
+     ]
+    }
+   ],
+   "execution_count": 12
+  },
+  {
    "metadata": {},
    "cell_type": "code",
-   "source": "",
-   "id": "f0bbbc45e8d9f1fa",
    "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "source": "",
+   "id": "6f98e1f4a150d0a0"
   }
  ],
  "metadata": {
