--- a/assignment3.ipynb
+++ b/assignment3.ipynb
@@ -1890,7 +1890,7 @@
     "\n",
     "timestamps2 = df.index.get_level_values(\"timestamp\")\n",
     "df['weekday'] = timestamps2.day_name() #day names\n",
-    "df['is_weekend'] = df['weekday'].isin(['Saturday', 'Sunday']) #bol mask\n",
+    "df['is_weekend'] = df['weekday'].isin(['Saturday', 'Sunday']) #bool mask\n",
     "\n",
     "\n"
    ],
